--- a/Views/DangKyXetTuyenKhac/IeltsEdit.cshtml
+++ b/Views/DangKyXetTuyenKhac/IeltsEdit.cshtml
@@ -86,8 +86,8 @@
                         </div>
                         <div class="col-12"><hr class="mt-1 mb-2" /></div>
                         <div class="row">
-                            <div class="col-4">Ngành</div>
-                            <div class="col-8">
+                            <div class="col-md-4 col-3">Ngành</div>
+                            <div class="col-md-8  col-9">
                                 <select id="Nganh_ID" class="form-select"></select>
                                 <span id="Nganh_ID_Error" class="small mb-1 text-danger"></span>
                             </div>
